Update coverpage and default layouts to use new preview image; modify contact email for clarity.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://corrworkshop.github.io/images/teaser.png" />
-  <meta name="twitter:image" content="https://corrworkshop.github.io/images/teaser.png" />
+  <meta property="og:image" content="https://simulatingrobotworlds.github.io/images/preview.png" />
+  <meta name="twitter:image" content="https://simulatingrobotworlds.github.io/images/preview.png" />
   <meta name="twitter:card" content="Learning to Simulate Robot Worlds" />
   <script>
     /* JavaScript module code here */
