--- a/_layouts/coverpage.html
+++ b/_layouts/coverpage.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://corrworkshop.github.io/images/teaser.png" />
+  <meta property="og:image" content="https://simulatingrobotworlds.github.io/images/preview.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Learning to Simulate Robot Worlds">
   <meta name="twitter:description" content="Join the Learning to Simulate Robot Worlds workshop.">
-  <meta name="twitter:image" content="https://corrworkshop.github.io/images/teaser.png" />
+  <meta name="twitter:image" content="https://simulatingrobotworlds.github.io/images/preview.png" />
 
   <script>
   
@@ -79,7 +79,7 @@
 
   <div class="footnote bg-light">
     <div class="container">
-      <p>For questions / comments, reach out to: <a href="mailto:	corrworkshop@googlegroups.com">	corrworkshop@googlegroups.com</a></p>
+      <p>For questions / comments, reach out to: <a href="mailto:	TODO@googlegroups.com">	TODO@googlegroups.com</a></p>
       <p>Website template adapted from the <a href="https://objects-structure-causality.github.io">OSC</a>/<a href="https://orlrworkshop.github.io/">ORLR</a> workshops, originally based on the template of the <a href="https://baicsworkshop.github.io/">BAICS</a> workshop.</p>
     </div>
   </div>
