--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ table .time {
   display: inline-block;
 }
 
-.dot-contributed-talk {
+.dot-panel-discussion {
   height: 12px;
   width: 12px;
   background-color: #2d89ef;
