added google group, workshop name correction

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
 
   <div class="footnote bg-light">
     <div class="container">
-      <p>For questions / comments, reach out to: <a href="mailto:	TODO@googlegroups.com">	TODO@googlegroups.com</a></p>
+      <p>For questions / comments, reach out to: <a href="mailto:	learning-to-simulate-robot-worlds@googlegroups.com">	learning-to-simulate-robot-worlds@googlegroups.com</a></p>
       <p>Website template adapted from the <a href="https://orlrworkshop.github.io/">ORLR</a>/<a href="https://oolworkshop.github.io/">OOL</a> workshops, originally based on the template of the <a href="https://baicsworkshop.github.io/">BAICS</a> workshop.</p>
     </div>
   </div>
