--- a/css/style.css
+++ b/css/style.css
@@ -304,9 +304,12 @@ table .time {
 }
 
 .main-content {
-  width: 80%;
-  margin: 20px 0 20px 5%;
-  text-align: left;
+  width: 80% !important;
+  margin: 20px 0 20px 5% !important;
+  text-align: left !important;
+  padding: 0 !important;
+  box-sizing: border-box;
+  display: block;
 }
 
 
