--- a/_layouts/coverpage.html
+++ b/_layouts/coverpage.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://simulatingrobotworlds.github.io/images/preview.png" />
+  <meta property="og:image" content="https://simulatingrobotworlds.github.io/images/preview2.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Learning to Simulate Robot Worlds">
   <meta name="twitter:description" content="Join the Learning to Simulate Robot Worlds workshop.">
-  <meta name="twitter:image" content="https://simulatingrobotworlds.github.io/images/preview.png" />
+  <meta name="twitter:image" content="https://simulatingrobotworlds.github.io/images/preview2.png" />
 
   <script>
   
